<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/habitColumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/habit_column"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivActivityLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/sport_logo"
        app:layout_constraintBottom_toBottomOf="@+id/habitColumn"
        app:layout_constraintStart_toStartOf="@+id/habitColumn"
        app:layout_constraintTop_toTopOf="@+id/habitColumn" />

    <TextView
        android:id="@+id/tvActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/your_activity"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/ivActivityLogo"
        app:layout_constraintTop_toTopOf="@+id/habitColumn" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/habitColumn"
        app:layout_constraintStart_toEndOf="@+id/ivActivityLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvActivity" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/habitColumn"
        app:layout_constraintEnd_toEndOf="@+id/habitColumn"
        app:layout_constraintTop_toTopOf="@+id/habitColumn" />

</androidx.constraintlayout.widget.ConstraintLayout>