<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.add.AddActivity">


        <TextView
            android:id="@+id/tvInputActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sarala_regular"
            android:text="@string/input_your_activity"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_activityNameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/activity_name"
            android:textColorHint="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInputActivity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edActivityName"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:fontFamily="@font/notosans_regular"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvActivityCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_category"
            android:fontFamily="@font/sarala_regular"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerBobot" />

        <TextView
            android:id="@+id/tvBobot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:fontFamily="@font/sarala_regular"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_activityNameLayout" />

        <Spinner
            android:id="@+id/spinnerBobot"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_purple"
            android:popupBackground="@color/light_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBobot" />

        <Spinner
            android:id="@+id/spinnerActivity"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_purple"
            android:popupBackground="@color/light_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvActivityCategory" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sarala_regular"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_startHourLayout" />

        <Spinner
            android:id="@+id/spinnerInterest"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_purple"
            android:popupBackground="@color/light_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_startHourLayout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/start_hour"
            android:textColorHint="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerActivity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edStartHour"
                android:textColor="@color/white"
                android:inputType="number"
                android:maxLength="2"
                android:fontFamily="@font/notosans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_EndHourLayout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/end_hour"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:textColorHint="@color/white"
            app:layout_constraintStart_toEndOf="@+id/ed_startHourLayout"
            app:layout_constraintTop_toBottomOf="@+id/spinnerActivity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEndHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                android:fontFamily="@font/notosans_regular"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/submit"
            android:textSize="16sp"
            android:fontFamily="@font/sarala_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerInterest" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>